--- a/main.css
+++ b/main.css
@@ -247,161 +247,147 @@ label
 	-webkit-transform: translateY(-50%);
 	-ms-transform: translateY(-50%);
 	transform: translateY(-50%);
-  }
-  
-  /* Style the icon bar links */
-  .icon-bar a {
-	display: block;
+}  
+/* Style the icon bar links */
+.icon-bar a {
+    display: block;
 	text-align: center;
 	padding: 16px;
 	transition: all 0.3s ease;
 	color: white;
 	font-size: 20px;
-  }
+}
+/* Style the social media icons with color, if you want */
+.icon-bar a:hover {
+	background-image: linear-gradient(to right, #ff76b4, #ff45a0);
+}
+.icontake {
+	background-image: linear-gradient(to right, #9e9fff, #877bff);	  
+}
+.iconroundbtm {
+	background-image: linear-gradient(to right, #9e9fff, #877bff);
+	border-bottom-right-radius: 20px;
+}
+.iconroundup {
+	background-image: linear-gradient(to right, #9e9fff, #877bff);
+	border-top-right-radius: 20px;
+}
+.airQ {
+    color: #03e879;
+    font-size: 3em;
+    margin-left: 8%;
+}
+.rfBtn {
+    border-radius: 8px;
+    background-color: #f5f5ff; /* Green */
+    border: none;
+    color: #8c83ff;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-right: 20%;
+    margin-bottom: 10%;
+}
+.wCard {
+    background-color: white;
+    border-radius: 30px;
+    width: 100%;
+    margin-left: 6%;
+
+}
+.wCard:hover {
+   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+.styleVal {
+    margin-left: 2%;
+    width: 80px;
+    margin-bottom: 2%;
+}
+.inCard {
+    text-align: center;
+    background-color: #d4e5f0;
+    color: #07cc7f;
+    font-size: 1.5em;
+    border-radius: 10px;
+}
+.card {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    margin-right: 1.5%;
+    margin-left: 1.5%;
+    color: #443e60;
+    text-align: center;
+    border-radius: 40px;
+    width: 10%;
+}
   
-  /* Style the social media icons with color, if you want */
-  .icon-bar a:hover {
-	  background-image: linear-gradient(to right, #ff76b4, #ff45a0);
-	}
-	.icontake {
-	  background-image: linear-gradient(to right, #9e9fff, #877bff);	  
-	}
-  .iconroundbtm {
-	  background-image: linear-gradient(to right, #9e9fff, #877bff);
-	  border-bottom-right-radius: 20px;
-  }
-  .iconroundup {
-	  background-image: linear-gradient(to right, #9e9fff, #877bff);
-	  border-top-right-radius: 20px;
-  }
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+    background-image: linear-gradient(to right, #9a95ff, #7f6aff);
+    color: white;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
   
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  
+/* Add some padding inside the card container */
+.container {
+    padding: 2px 16px;
+}
+.wIcon {
+    width: 70px;
+    height: auto;
+}
+
+.tCard {
+    background-color: white;
+    border-radius: 30px;
+    margin-top: 3%;
+    width: 90%;
+    margin-left: 5%;
+}
+.tCard:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.progress-bar-vertical {
+    width: 20px;
+    min-height: 200px;
+    margin-right: 20px;
+    background: #d0cece;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    align-items: flex-end;
+    -webkit-align-items: flex-end
+}
+
+.progress-bar-vertical .progress-bar {
+    width: 100%;
+    height: 0;
+    -webkit-transition: height 0.6s ease;
+    -o-transition: height 0.6s ease;
+    transition: height 0.6s ease
+}
+
+.progress-striped {
+    background-color: #ee5f5b;
+    background-image: -webkit-gradient(linear, 0 100%, 100% 0, color-stop(0.25, rgba(255, 255, 255, 0.15)), color-stop(0.25, transparent), color-stop(0.5, transparent), color-stop(0.5, rgba(255, 255, 255, 0.15)), color-stop(0.75, rgba(255, 255, 255, 0.15)), color-stop(0.75, transparent), to(transparent));
+    background-image: -webkit-linear-gradient(0deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
+    background-image: -moz-linear-gradient(0deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
+    background-image: -o-linear-gradient(0deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
+    background-image: linear-gradient(0deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent)
+}
+
+.midCard {
+    background-color: #fff9ee;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-bottom: 8%;
+    border-radius: 15px;
+}
+.midCard:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
